--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,13 @@
     padding: 0;
 }
 body{
-
+    font-size: 16px;
 }
 header{
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    position: relative;
 }
 .img-wrapper{
     width: 100%;
@@ -23,4 +24,19 @@ header{
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
+}
+
+.banner{
+    position: absolute;
+    top: 30%;
+    left: 8%;
+}
+
+.banner h1{
+    color: #ffffff;
+    font-size: 2em;
+}
+.banner p{
+    color: #ffffff;
+    font-size: 1.5em;
 }
