font size cabeçalho

--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,24 @@ header{
 
 .banner h1{
     color: #ffffff;
-    font-size: 2em;
+    font-size: 2rem;
+    font-family: "Baloo 2",serif;
+    font-weight: 600;
+    text-shadow: .2rem .2rem 2px rgba(0, 0, 0, 0.72);
+    line-height: 3.5rem;
+    margin-bottom: 0.5rem;
 }
 .banner p{
     color: #ffffff;
-    font-size: 1.5em;
+    font-size: 1.5rem;
+    font-family: "Josefin Sans",serif;
+    font-weight: 400;
+    text-shadow: .2rem .2rem 2px rgba(0, 0, 0, 0.72);
+    line-height: 3.5rem;
+    margin-bottom: 2rem;
+}
+.banner button{
+  font-family:"Mulish", serif;
+  color: #000;
+  background-color: #211ec2;
 }
