--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,14 @@ header{
     margin-bottom: 2rem;
 }
 .banner button{
-  font-family:"Mulish", serif;
-  color: #000;
-  background-color: #211ec2;
+  font-family: "Josefin Sans",serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: .9rem;
+  color: rgb(255, 255, 255);
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgb(23, 18, 111) 0%, rgb(7, 108, 128) 100%);  
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  border-style: none;
 }
