--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@ header{
     opacity: 0.5;
 }
 
+.img-eu{
+  padding-right: 85%;
+}
+.img-eu img{
+  width: 100%;
+  height: 100%;
+}
+
 .banner{
     position: absolute;
     top: 30%;
@@ -61,4 +69,9 @@ header{
   padding: 1rem 2rem;
   border-radius: 4px;
   border-style: none;
+}
+.banner button:hover{
+  transform:scale(1.04);
+  transition: 0.45s;
+  cursor: pointer;
 }
