--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,25 @@ header{
     overflow: hidden;
     position: relative;
 }
+.hamburguer{
+  /* background-color: rgb(155, 0, 0); */
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  z-index: 100;
+  right: 2rem;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.line{
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  height: 0.01rem;
+  box-shadow: 0.1rem 0.1rem 1px #000000ef;
+
+}
 .img-wrapper{
     width: 100%;
     height: 100%;
